# tp-operativos

./: CMakeLists.txt  makefile
cpu/: cpu.config
cpu/src/: cpu_ciclo.c  cpu_ciclo.h  cpu_client.c  cpu_client.h  cpu_conexion.c  cpu_conexion.h  cpu_config.c  cpu_config.h  cpu_registros.c  cpu_registros.h  cpu_server.c  cpu_server.h  main.c
entradasalida/: settings.mk
entradasalida/src/: entradasalida_conexion.c  entradasalida_conexion.h  entradasalida_config.c  entradasalida_config.h  entradasalida_interfaces.c  entradasalida_interfaces.h  main.c
kernel/: kernel.config
kernel/src/: kernel_conexion.c  kernel_conexion.h  kernel_config.c  kernel_config.h  kernel_user_interface.c  kernel_user_interface.h  main.c  planificador.c  planificador.h
memoria/: settings.mk
memoria/src/: main.c  memoria_conexion.c  memoria_conexion.h  memoria_config.c  memoria_config.h  memoria_management.c  memoria_management.h
utils/: settings.mk
utils/src/sockets/: client.c  client.h  conexiontad.c  conexiontad.h  networking.c  networking.h  protocol.c  protocol.h  server.c  server.h
utils/src/utils/: config.c  config.h  logger.c  logger.h  module.c  module.h  module_tads.c  module_tads.h
